# kamiya

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  kamiya_exported.yml  package.py  tesuto.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
kamiya_app/: Cargo.toml
kamiya_app/src/: actions.rs  args.rs  main.rs  manager.rs  term.rs
kamiya_app/src/utils/: tempfile.rs
kamiya_config/: Cargo.toml
kamiya_config/src/: lib.rs
kamiya_database/: Cargo.toml
kamiya_database/src/: lib.rs
kamiya_utils/: Cargo.toml
kamiya_utils/src/: proc.rs  tempfile.rs
src/: actions.rs  args.rs  clipboard.rs  config.rs  database.rs  main.rs  manager.rs  platform.rs  term.rs  utils.rs
src/utils/: clipboard.rs  mod.rs  platform.rs  tempfile.rs
