[package]
name = "kamiya"
description = "An easy, fast and lightweight tool to create notes in terminal."
authors = ["Konstantin Zhigaylo <kostya.zero@debilosempire.org>"]
keywords = ["notes", "cli"]
readme = "README.md"
repository = "https://gitlab.com/kostya-zero/kamiya"
license = "GPL-3.0"
version = "0.5.0"
edition = "2021"

[dependencies]
clap = "4.2.4"
home = "0.5.4"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
