[package]
name = "kamiya"
description = "No-nonsense note taking app for terminal."
authors = ["Konstantin Zhigaylo <kostya.zero@outlook.org>"]
keywords = ["notes", "cli"]
readme = "../README.md"
repository = "https://github.com/kostya-zero/kamiya"
license = "GPL-3.0"
version = "0.6.0"
edition = "2021"

[dependencies.kamiya_database]
version = "0.1.0"
path = "../kamiya_database"

[dependencies.kamiya_config]
version = "0.1.0"
path = "../kamiya_config"

[dependencies]
clap = "4.2.4"
home = "0.5.4"
toml = "0.7.6"
serde_json = "1.0.105"
